<resources>
    <string name="app_name">Laba2</string>
    <string name="welcome_txt">Добро пожаловать в Сибирский Ботанический сад</string>
    <string name="welcome_txt_additive">Томского Государственного университета</string>
    <string name="enter">войти</string>
    <string name="registration">регистрация</string>
    <string name="done">готово</string>
    <string name="login_ask">Пожалуйста, введите свой логин</string>
    <string name="registration_ask">Пожалуйста, введите свои данные</string>
    <string name="no_account">нет аккаунта</string>
    <string name="forgot_password_question">забыли пароль?</string>
    <string name="already_have_an_account">уже есть аккаунт</string>
    <string name="OR">ИЛИ</string>
    <string name="accept_terms">я даю согласие на обработку моих персональных данных и соглашаюсь с <u>политикой конфиденциальности</u></string>
    <string name="create_garden_name">Придумайте название вашего сада</string>
    <string name="garden_name">имя</string>
    <string name="edit_text_login_or_email">логин или e-mail</string>
    <string name="edit_text_password">пароль</string>
    <string name="name">имя</string>
    <string name="repeat_password">повторите пароль</string>
    <string name="text_label_1">геолокация</string>
    <string name="text_label_2">меню</string>
    <string name="text_label_3">кружочек</string>
    <string name="text_label_4">звёздочка</string>
    <string name="text_label_5">информация</string>
    <string name="GIACINT">ГИАЦИНТ</string>
    <string name="hyacintus_lat">лат. Hyacintus</string>
    <string name="hiacintus_txt_1st_part">Гиаци́нт (лат. Hyacínthus) — род растений семейства Спаржевые (Asparagaceae). Ранее выделялся в собственное семейство Гиацинтовые (Hyacinthaceae) или включался в семейство Лилейные (Liliaceae).</string>
    <string name="hiacintus_txt_2st_part">Названия цветка происходит от древнегреческого мифа о спартанском принце Гиацинте, возлюбленном Аполлона, которого тот случайно убил во время игры в метание диска и из крови которого по легенде и появился этот цветок.</string>
    <string name="list_of_plantings">Справочник посадок</string>
    <string name="plant_1">Ель</string>
    <string name="plant_2">Гиацинт</string>
    <string name="hyacintus_descr_lat">Hyacintus</string>
    <string name="plant_2_descr">Гортензия</string>
    <string name="plant_2_descr_lat">Hydrangea</string>
    <string name="plant_3_descr_lat">Picea abies</string>
    <string name="plant_4_descr">Василек</string>
    <string name="plant_4_descr_lat">Centaurea cyanus</string>
    <string name="plant_5">Ирис</string>
    <string name="plant_5_descr">Iris</string>

</resources>