<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_registration"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_2"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="8sp"
                android:onClick="moveToRegistrationAcc"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textColor="@color/color_button_1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_1"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="8sp"
                android:onClick="moveToLoginAcc"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:textColor="@color/color_button_2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/button_registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="lollipop" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textRecipe2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/welcome_txt_additive"
                android:textColor="@color/color_button_2"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textRecipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="0sp"
                android:text="@string/welcome_txt"
                android:textColor="@color/color_button_2"
                android:textScaleX="1.0237"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/textRecipe2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="75dp"
                android:layout_height="150dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/textRecipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="190dp"
                android:layout_height="160dp"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginBottom="132dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/dark_bird" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.52" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
